--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@
                 color: black;
 }
 
+/*crisis support hotline*/
+.csh {border: 5px outset red;
+      text-align: center;
+      font-size: 15px;
+}
+.csh p {margin-top: 2px;
+        margin-bottom: 2px;
+}
+
 /*footer stuff*/
 footer {text-align: center;
 }
