--- a/style.css
+++ b/style.css
@@ -20,14 +20,16 @@
 }
 
 /*crisis support hotline*/
-.csh {border: 5px outset red;
-      text-align: center;
-      font-size: 15px;
-}
-.csh p {margin-top: 2px;
-        margin-bottom: 2px;
+.csh {
+  border: 5px outset red;
+  text-align: center;
+  font-size: 15px;
 }
 
+.csh p {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
 
 /*footer stuff*/
 footer {
@@ -40,33 +42,45 @@ footer h6 {
 }
 
 /*Home page image and text*/
-.homeimage img {border-radius: 8px;
-                max-width: 100%;
-                height: auto;
+.homeimage img {
+  border-radius: 8px;
+  max-width: 100%;
+  height: auto;
 }
-table{width: 100%;
-    border-collapse:collapse;
+
+table {
+  width: 100%;
+  border-collapse: collapse;
 }
-td{
-    width: 50%;
-    text-align: left;
+
+td {
+  width: 50%;
+  text-align: left;
 }
-table img {border-radius: 8px;
-            max-width: 100%;
-            height: auto;
+
+table img {
+  border-radius: 8px;
+  max-width: 100%;
+  height: auto;
 }
+
 .column {
   float: left;
   width: 33.33%;
 }
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
-.column {text-align: center;
+
+.column {
+  text-align: center;
 }
-.column ul {list-style-type: none;
+
+.column ul {
+  list-style-type: none;
 }
 
 /*contact main style template*/
@@ -91,5 +105,6 @@ table img {border-radius: 8px;
 #contact h3 {}
 
 /*support page*/
-.services h1 {text-align: center;
+.services h1 {
+  text-align: center;
 }
