--- a/style.css
+++ b/style.css
@@ -93,18 +93,27 @@ table img {
   padding: 1px 10px 20px 10px;
 }
 
-#contact h2 {
+/*#contact h2 {
   margin-top: 0;
   font-size: 2em;
   text-align: left;
   text-shadow: 2px 2px 2px #000000;
   background-color: #111111;
   padding: 5px 10px 10px 10px;
-}
+}*/
+#contact h2 {}
 
-#contact h3 {}
+text-align: center;
 
 /*support page*/
 .services h1 {
+  text-align: center;
+}
+
+#title1 h2 {
+  text-align: center;
+}
+
+.title2 h2 {
   text-align: center;
 }
