--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font size: 17px;
+  font-size: 17px;
 }
 
 .topnav a:hover {
@@ -101,9 +101,7 @@ table img {
   background-color: #111111;
   padding: 5px 10px 10px 10px;
 }*/
-#contact h2 {}
-
-text-align: center;
+#contact h2 {text-align: center;}
 
 /*support page*/
 .services h1 {
