--- a/style.css
+++ b/style.css
@@ -101,7 +101,9 @@ table img {
   background-color: #111111;
   padding: 5px 10px 10px 10px;
 }*/
-#contact h2 {text-align: center;}
+#contact h2 {
+  text-align: center;
+}
 
 /*support page*/
 .services h1 {
