--- a/style.css
+++ b/style.css
@@ -115,3 +115,18 @@ table img {
 .title2 h2 {
   text-align: center;
 }
+
+
+/*services page*/
+.services a:link, a:visited {
+  background-color: #4eaee1;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.services a:hover, a:active {
+  background-color: #86c340;
+}
