--- a/style.css
+++ b/style.css
@@ -120,6 +120,9 @@ table img {
 
 
 /*services page*/
+.services p {
+  text-align: center;
+}
 .services a:link, a:visited {
   background-color: #4eaee1;
   color: white;
