--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /*navigation links*/
 .topnav a {
   float: left;
-  color: #4eaee1;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
