--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*navigation background*/
 .topnav {
-  background-color: #ffffff;
+  background-color: #DBDBDB;
   overflow: hidden;
   color: #000000;
 }
