--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ table img {
 }
 .services a:link, a:visited {
   background-color: #4eaee1;
-  color: white;
+  color: black;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
